# shrike

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  build.rs  docker-compose.yml
docs/superpowers/plans/: 2026-04-06-rust-rewrite.md
docs/superpowers/specs/: 2026-04-06-discoprowl-rewrite-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/lib/: FormField.svelte  Modal.svelte  Nav.svelte  api.js
frontend/src/routes/: Dashboard.svelte  Match.svelte  Notifications.svelte  SearchTerms.svelte  Sources.svelte
migrations/: 001_initial.sql  002_add_prowlarr_source_type.sql  003_matches_dedup.sql  004_source_last_error.sql  005_source_categories.sql
src/: assets.rs  config.rs  db.rs  enrichment.rs  lib.rs  main.rs  matcher.rs  models.rs  scheduler.rs  steamgriddb.rs
src/api/: art.rs  error.rs  matches.rs  mod.rs  notifications.rs  scan.rs  search_terms.rs  sources.rs
src/notifier/: apprise.rs  discord.rs  mod.rs  pushover.rs
src/sources/: mod.rs  newznab.rs  prowlarr.rs  rss.rs  torznab.rs
tests/: api_tests.rs  matcher_tests.rs
