[package]
name = "discoprowl"
version = "2.1.1"
edition = "2021"

[[bin]]
name = "discoprowl"
path = "src/main.rs"

[lib]
name = "discoprowl"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli", "deflate"] }
feed-rs = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
mime_guess = "2"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3"
